Refactors and tests
*Refactors:*
1. Refactor the entire logic of Ui update mechanisms. Previously was done through constructor overloading within `CommandResult`, now it is done through `Model`. This should comply better with the MVC pattern.
2. Move the `Theme` directory from `model` to `ui`.

*Tests:*
1. Replace "addressbook" to "unite" in all tests.
2. Make some fields `final`.